--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "build": "npm run build:esm && npm run build:cjs",
     "build:esm": "tsc --module ESNext --outDir dist/esm",
     "build:cjs": "tsc --module CommonJS --outDir dist/cjs",
-    "watch": "npm-watch"
+    "watch": "npm-watch",
+    "idml:test": "(cd test && zip -r ../test.idml .)"
   },
   "watch": {
     "build": {
@@ -43,18 +44,29 @@
   "description": "",
   "devDependencies": {
     "@types/fs-extra": "^11.0.4",
+    "@types/jsdom": "^21.1.7",
+    "@types/lodash": "^4.17.12",
     "@types/node": "^22.7.9",
     "npm-watch": "^0.13.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@flatten-js/core": "^1.6.2",
     "@js-bits/dom-parser": "^1.0.3",
     "@rgrove/parse-xml": "^4.1.0",
+    "canvas": "^2.11.2",
     "client-zip": "^2.4.5",
+    "clipper-lib": "^6.4.2",
+    "css-expression": "^0.0.8",
     "dom-parser": "^1.1.5",
     "fast-xml-parser": "^4.5.0",
     "fs-extra": "^11.2.0",
+    "inline-style-parser": "^0.2.4",
+    "jsdom": "^25.0.1",
+    "lodash": "^4.17.21",
+    "paper-jsdom": "^0.12.18",
+    "svg-path-commander": "^2.1.3",
     "unzipit": "^1.4.3",
     "xml-formatter": "^3.6.3"
   }
