--- a/demo/package.json
+++ b/demo/package.json
@@ -11,7 +11,14 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/beautify": "^0.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "@resvg/resvg-js": "^2.6.2",
+    "beautify": "^0.0.8",
+    "html-prettify": "^1.0.7",
+    "xml-formatter": "^3.6.3"
   }
 }
