--- a/package.json
+++ b/package.json
@@ -52,21 +52,12 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "@flatten-js/core": "^1.6.2",
     "@js-bits/dom-parser": "^1.0.3",
-    "@rgrove/parse-xml": "^4.1.0",
-    "canvas": "^2.11.2",
     "client-zip": "^2.4.5",
-    "clipper-lib": "^6.4.2",
     "css-expression": "^0.0.8",
-    "dom-parser": "^1.1.5",
-    "fast-xml-parser": "^4.5.0",
-    "fs-extra": "^11.2.0",
+    "flat-svg": "^0.0.1",
     "inline-style-parser": "^0.2.4",
-    "jsdom": "^25.0.1",
-    "lodash": "^4.17.21",
     "paper-jsdom": "^0.12.18",
-    "svg-path-commander": "^2.1.3",
     "unzipit": "^1.4.3",
     "xml-formatter": "^3.6.3"
   }
