--- a/demo/package.json
+++ b/demo/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@resvg/resvg-js": "^2.6.2",
+    "idml": "^0.0.1",
     "beautify": "^0.0.8",
     "gradient2svg": "^0.0.4",
     "html-prettify": "^1.0.7",
