--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -6,30 +6,53 @@ on:
   pull_request:
     branches: [main]
 jobs:
-  publish-npm:
+  # publish-npm:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-node@v2
+  #       with:
+  #         node-version: 16
+  #         registry-url: https://registry.npmjs.org/
+
+  #     - name: Install dependencies
+  #       run: npm install
+  #       env:
+  #         NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+
+  #     - name: Inject plain idml
+  #       run: npm run inject-idml-plain
+
+  #     - name: test
+  #       run: cat src/assets/IDML_PLAIN.ts
+
+  #     - name: Build and publish
+  #       run: npm run build
+
+  #     - name: Publish to npm
+  #       run: npm publish
+  #       env:
+  #         NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+
+  deploy-cloudflare:
     runs-on: ubuntu-latest
+    #needs: publish-npm
+    env:
+      CLOUDFLARE_PROJECT_NAME: svg2idml
+      CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+      CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 16
-          registry-url: https://registry.npmjs.org/
-
-      - name: Install dependencies
-        run: npm install
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
-
-      - name: Inject plain idml
-        run: npm run inject-idml-plain
-
-      - name: test
-        run: cat src/assets/IDML_PLAIN.ts
-
-      - name: Build and publish
+      - name: Install latest zoompinch
+        run: npm install zoompinch@latest
+        working-directory: demo-web
+      - name: test installed version
+        run: cat package.json | grep -e '"zoompinch":'
+        working-directory: demo-web
+      - name: Build demo-web
         run: npm run build
-
-      - name: Publish to npm
-        run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+        working-directory: demo-web
+      - name: Deploy to Cloudflare Pages
+        run: npx wrangler pages deploy dist --project-name ${{ env.CLOUDFLARE_PROJECT_NAME }} --branch main
+        working-directory: demo-web
