--- a/demo-web/package.json
+++ b/demo-web/package.json
@@ -14,6 +14,7 @@
     "bytes": "^3.1.2",
     "downloadjs": "^1.4.7",
     "flat-svg": "^0.0.7",
+    "idml": "^0.0.1",
     "naive-ui": "^2.40.1",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
