--- a/demo-web/package.json
+++ b/demo-web/package.json
@@ -20,11 +20,15 @@
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@rollup/plugin-inject": "^5.0.5",
     "@types/bytes": "^3.1.4",
     "@vitejs/plugin-vue": "^5.1.4",
+    "buffer": "^6.0.3",
+    "rollup-plugin-polyfill-node": "^0.13.0",
     "sass-embedded": "^1.81.0",
     "typescript": "~5.6.2",
     "vite": "^5.4.10",
+    "vite-plugin-node-polyfills": "^0.22.0",
     "vue-tsc": "^2.1.8"
   }
 }
