--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -6,33 +6,33 @@ on:
   pull_request:
     branches: [main]
 jobs:
-  # publish-npm:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: actions/setup-node@v2
-  #       with:
-  #         node-version: 16
-  #         registry-url: https://registry.npmjs.org/
+  publish-npm:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 16
+          registry-url: https://registry.npmjs.org/
 
-  #     - name: Install dependencies
-  #       run: npm install
-  #       env:
-  #         NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      - name: Install dependencies
+        run: npm install
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
-  #     - name: Inject plain idml
-  #       run: npm run inject-idml-plain
+      - name: Inject plain idml
+        run: npm run inject-idml-plain
 
-  #     - name: test
-  #       run: cat src/assets/IDML_PLAIN.ts
+      - name: test
+        run: cat src/assets/IDML_PLAIN.ts
 
-  #     - name: Build and publish
-  #       run: npm run build
+      - name: Build and publish
+        run: npm run build
 
-  #     - name: Publish to npm
-  #       run: npm publish
-  #       env:
-  #         NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+      - name: Publish to npm
+        run: npm publish
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
 
   deploy-cloudflare:
     runs-on: ubuntu-latest
